Enhance hero section with animated jewelry image and glowing effect

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
               <button class="cta-button" data-page="products">Shop Collection</button>
             </div>
             <div class="hero-image">
+              <div class="hero-animated-image">
+                <img src="/images/pendant.jpg" alt="Aurora Pendant" class="glow-animate" />
+              </div>
               <div class="floating-gems">
                 <i class="fas fa-gem gem-1"></i>
                 <i class="fas fa-gem gem-2"></i>
