--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,12 @@
       </div>
 
       <!-- Products Page -->
+      <!-- Product Details Page -->
+      <div id="product-details-page" class="page">
+        <div class="container">
+          <div id="product-details-content"></div>
+        </div>
+      </div>
       <div id="products-page" class="page">
         <div class="container">
           <div class="page-header">
@@ -231,46 +237,22 @@
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-section">
-            <h3>Aurora Jewelry</h3>
-            <p>Handcrafted elegance inspired by natural beauty.</p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-pinterest"></i></a>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-            </div>
-          </div>
-          <div class="footer-section">
-            <h4>Quick Links</h4>
-            <ul>
-              <li><a href="#" data-page="products">Products</a></li>
-              <li><a href="#" data-page="about">About</a></li>
-              <li><a href="#" data-page="contact">Contact</a></li>
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h4>Customer Care</h4>
-            <ul>
-              <li><a href="#">Shipping Info</a></li>
-              <li><a href="#">Returns</a></li>
-              <li><a href="#">Size Guide</a></li>
-              <li><a href="#">Care Instructions</a></li>
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h4>Newsletter</h4>
-            <p>Subscribe for updates and special offers</p>
-            <div class="newsletter">
-              <input type="email" placeholder="Your email">
-              <button>Subscribe</button>
-            </div>
-          </div>
+      <div class="footer-content">
+        <div class="footer-brand">
+          <i class="fas fa-gem"></i> Aurora Jewelry
         </div>
-        <div class="footer-bottom">
-          <p>&copy; <span id="year"></span> Aurora Jewelry. All rights reserved.</p>
+        <div class="footer-links">
+          <a href="#" data-page="home">Home</a>
+          <a href="#" data-page="products">Products</a>
+          <a href="#" data-page="about">About</a>
+          <a href="#" data-page="contact">Contact</a>
         </div>
+        <div class="footer-social">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-pinterest"></i></a>
+        </div>
+        <div class="footer-copy">&copy; <span id="year"></span> Aurora Jewelry. Crafted with passion.</div>
       </div>
     </footer>
 
