--- a/public/index.html
+++ b/public/index.html
@@ -237,22 +237,68 @@
     </main>
 
     <footer class="site-footer">
-      <div class="footer-content">
-        <div class="footer-brand">
-          <i class="fas fa-gem"></i> Aurora Jewelry
+      <div class="footer-content tanishq-style">
+        <div class="footer-main-row">
+          <div class="footer-app">
+            <img src="/images/aurora-logo.png" alt="Aurora Jewelry" class="footer-logo" />
+            <h3>Download the Aurora App Now</h3>
+            <img src="/images/qr-code.png" alt="QR Code" class="footer-qr" />
+            <div class="footer-app-links">
+              <a href="#"><img src="/images/playstore.png" alt="Play Store" /></a>
+              <a href="#"><img src="/images/appstore.png" alt="App Store" /></a>
+            </div>
+          </div>
+          <div class="footer-links-col">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><a href="#">Delivery Information</a></li>
+              <li><a href="#">International Shipping</a></li>
+              <li><a href="#">Payment Options</a></li>
+              <li><a href="#">Track your Order</a></li>
+              <li><a href="#">Returns</a></li>
+              <li><a href="#">Find a Store</a></li>
+            </ul>
+          </div>
+          <div class="footer-info-col">
+            <h4>Information</h4>
+            <ul>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Offers & Contest Details</a></li>
+              <li><a href="#">Help & FAQs</a></li>
+              <li><a href="#">About Aurora</a></li>
+            </ul>
+          </div>
+          <div class="footer-contact-col">
+            <h4>Contact Us</h4>
+            <span>+1 (800) 555-0199</span>
+            <h4>Chat With Us</h4>
+            <span>+1 (800) 555-0199</span>
+            <div class="footer-chat-icons">
+              <a href="#"><i class="fab fa-whatsapp"></i></a>
+              <a href="#"><i class="fas fa-envelope"></i></a>
+              <a href="#"><i class="fas fa-comment"></i></a>
+            </div>
+          </div>
         </div>
-        <div class="footer-links">
-          <a href="#" data-page="home">Home</a>
-          <a href="#" data-page="products">Products</a>
-          <a href="#" data-page="about">About</a>
-          <a href="#" data-page="contact">Contact</a>
+        <div class="footer-social-row">
+          <span>Social</span>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
-        <div class="footer-social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-pinterest"></i></a>
+        <div class="footer-payments-row">
+          <img src="/images/visa.png" alt="Visa" />
+          <img src="/images/mastercard.png" alt="Mastercard" />
+          <img src="/images/amex.png" alt="Amex" />
+          <img src="/images/discover.png" alt="Discover" />
         </div>
-        <div class="footer-copy">&copy; <span id="year"></span> Aurora Jewelry. Crafted with passion.</div>
+        <div class="footer-legal-row">
+          <span>&copy; <span id="year"></span> Aurora Jewelry. All Rights Reserved.</span>
+          <a href="#">Terms & Conditions</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Disclaimer</a>
+        </div>
       </div>
     </footer>
 
